# !! CW Warning !!

If you use CW and you have different RX and TX antenna ports configured, there is a high potential for full RF power to be present briefly on the RX port. This may lead to damage of any sensitive equipment attached to the RX port such as active antennas and the like. This situation can occur if you utilise the CWX form, serial keying/PTT, and standard hardware keys plugged into the radio. This issue is currently under investigation and has existed in Thetis for an extended period (years and years). If you are interested in following the progress, you can read more about it on [GitHub here](https://github.com/ramdor/Thetis/issues/228).

**Note: You can revisit these release notes by clicking the button in the setup form within the General -> H/W Select tab.**


Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/issues/new/choose).

## v2.10.3.6 Change Log - WIP dev
- [add] -help command line option
- [fix] vac mic audio source can now be recorded
- [fix] disable split when operating extended and out of a ham band will no longer disable split
- [fix] output power on ANT ports configured as RX only should be resolved. Requires an update to your firmware
- [change] the dB shift setting for AGC auto noise floor compensation is now a true shift from NF. You will probably need to tweak your previous setting
- [change] the shutdown log is defaulted off. Use command line param -logshutdown to cause Thetis to create a shutdown_log.txt file if you are having shutdown issues which can then be sent in for analysis

## v2.10.3.5 Change Log
- [add] midi device DJ2GO2 Touch MIDI is now handled uniquely, and main sliders will have values reversed
- [add] mox/ptt time out timer functionality in Options2 tab
- [add] amp view will restore size if set to 'show on startup'
- [add] new Cat/Midi support for Quick Play/Record by Sigi DH1KLM
	- ZZQA 1/0 QuickPlay
	- ZZQB 1/0 QuickRecord