@@ -6,6 +6,6 @@ namespace Thetis
 { 
     public static class VersionInfo 
     { 
-        public static string BuildDate { get { return "01/15/24"; } }  
+        public static string BuildDate { get { return "01/28/24"; } }  
     } 
 } 
